# FoxCM

./: .gitignore  LICENSE  README.md  app.py  git.sh  main.go  manifest.json  pyproject.toml  requirements.txt  sw.js
data/: foxcm-sp.json  system.json  user.json
static/css/: BeatifIntredPlayer.min.css  admin.css
static/js/: BeatifIntredPlayer.min.js
templates/: admin.html  base.html  index.html  login.html  play.html  register.html  search_results.html  upload.html  user_profile.html
